nouvelle  version avec ajout de feedback en cours. methode put pas encore supportée

--- a/src/main/resources/static/partials/liste.html
+++ b/src/main/resources/static/partials/liste.html
@@ -15,7 +15,7 @@
                     	<td>{{c.id}}</td>
             			<td>{{c.nom}}</td>
             			<td>{{c.prenom}}</td>
-            			<td>{{c.dateEmbauche}}</td>
+            			<td>{{c.dateEmbauche|date:'dd-MM-yyyy'}}</td>
             			<td>{{c.email}}</td>
             			<td>
             			<a href="#/Collaborateurs/{{c.id}}"><i class="fa fa-files-o fa-lg "></i></a>
