--- a/src/main/resources/static/partials/details_collaborateur.html
+++ b/src/main/resources/static/partials/details_collaborateur.html
@@ -1,15 +1,170 @@
-<div  ng-init="voirDetailsCollaborateur()">
+<div class="ibox-content" ng-init="voirDetailsCollaborateur()">
 <h2 > Details du collaborateur</h2>
-   <ul>
-      <li>Nom : {{collaborateur.nom}}</li>
-      <li>Prenom: {{collaborateur.prenom}}</li>
-      <li>Date de naissance collaborateur: {{collaborateur.dateNaissance}}</li>
-      <li>Date d'embauche: {{collaborateur.dateEmbauche}}</li>
-      <li>Poste Occupe: {{collaborateur.poste}}</li>
-      <li>Email: {{collaborateur.email}}</li>
-      <li>Manager Rh: {{collaborateur.managerRh.nom}}</li>
-      <li>feedbacks: {{collaborateur.feedbacks}}</li>
-      <li>objectifs: {{collaborateur.nom}}</li>
-      <li>Projets: <span ng-repeat="p in collaborateur.projets">{{p.intitule}}</span></li>
-   </ul>
+<uib-tabset>
+    <uib-tab>
+    <tab-heading>
+     <i class="fa fa-user"></i> Profil
+    </tab-heading>
+     <hr>
+      <div class="row">
+     
+        <div class="col-lg-10">
+            <div class="spacer panel panel-primary">
+                <div class="panel-heading">
+                    <i class="fa fa-info-circle"></i> Informations sur le collaborateur
+                </div>
+                <div class="panel-body">
+                  
+                 </div>
+                 <table class="table table-striped table-bordered table-hover table-condensed dataTables-example " >
+                    <tbody>
+                      <tr>
+                      <td>Nom :</td><td> {{collaborateur.nom}}</td>
+                      </tr>
+                      <tr>
+                      <td>Prenom :</td><td> {{collaborateur.prenom}}</td>
+                      </tr>
+                      <tr>
+                      <td>Date de naissance:</td><td>{{collaborateur.dateNaissance}}</td>
+                      </tr>
+                      <tr>
+                      <td>Date d'embauche:</td><td> {{collaborateur.dateEmbauche}}</td>
+                      </tr>
+                      <tr>
+                      <td>Poste Occupe:</td><td>{{collaborateur.poste}}</td>
+                      </tr>
+                      <tr>
+                      <td>Email:</td><td>{{collaborateur.email}}</td>
+                      </tr>
+                      <tr>
+                      <td>Manager RH:</td><td>{{collaborateur.managerRh.nom}}></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+            </div>
+    </div>
+    </uib-tab>
+    <uib-tab>
+    <tab-heading>
+     <i class="fa fa-desktop "></i> Projets
+    </tab-heading>
+    <hr/>
+     <div class="row">
+        <div class="col-lg-8">
+            <div class="spacer panel panel-primary">
+                <div class="panel-heading">
+                    <i class="fa fa-info-circle"></i> PROJETS DU COLLABORATEUR
+                </div>
+                <div class="panel-body">
+                </div>
+                <table class="table table-striped table-bordered table-hover table-condensed dataTables-example" >
+                   <thead>
+                   <tr>
+                     <th>Intitule</th>
+                     <th>Date de debut </th>
+                      <th>Date de fin</th>
+                   </tr>
+                   </thead>
+                    <tbody >
+                      <tr ng-repeat="p in collaborateur.projets">
+                          <td>{{p.intitule}}</td>
+                          <td> {{p.dateDebut}}</td>
+                          <td>{{p.dateFin}}</td>
+                      </tr>
+                      </tr>
+                    </tbody>
+                  </table>
+                 <div class="panel-footer">
+                      <button type="button" class="btn btn-block btn-outline btn-primary" data-toggle="modal" data-target="#myModal">Attribuer un nouveau projet</button>
+                 </div>
+            </div>
+        </div>
+    </div>
+    </uib-tab>
+     <uib-tab>
+     <tab-heading>
+     <i class="fa fa-clipboard "></i> Objectifs
+     </tab-heading>
+     <div class="row">
+      <div class="col-lg-5">
+            <div class="spacer panel panel-primary">
+                <div class="panel-heading">
+                    <i class="fa fa-info-circle"></i> OBJECTIFS DU COLLABORATEUR
+                </div>
+                <div class="panel-body">
+                  
+                </div>
+                <table class="table table-striped table-bordered table-hover table-condensed dataTables-example" >
+                   <thead>
+                   <tr>
+                     <th>Categorie</th>
+                     <th>Intitule </th>
+                      <th>Annee</th>
+                      <th>Pourcentage d'avancement</th>
+                   </tr>
+                   </thead>
+                    <tbody >
+                      <tr ng-repeat="o in collaborateur.objectifs">
+                          <td>{{o.categorie}}</td>
+                          <td> {{o.intitule}}</td>
+                          <td>{{o.annee}}</td>
+                          <td>{{o.poucentageAvancement}}</td>
+                      </tr>
+                      </tr>
+                    </tbody>
+                  </table>
+               
+            </div></div>
+            
+            <div class="col-lg-5 col-md-offset-1">
+            <div class="spacer panel panel-primary">
+                <div class="panel-heading">
+                    <i class="fa fa-info-circle"></i> Ajouter un objectif
+                </div>
+                <div class="panel-body">
+                  <div style="text-align:center;">
+                      <i class="fa fa-laptop fa-4x"> </i>
+                      <h2>Nouveau objectif</h2> 
+                  </div>
+                  
+                   <div class="form-group">
+                                                 <label>Nom</label> <input type="text" placeholder="intitule de l'objectif" class="form-control" ng-model="objectif.nom">
+                                            </div>
+                                            <div class="form-group">
+                                                 <label>Categorie</label> <input type="text" placeholder="categorie de l'objectif" class="form-control" ng-model="objectif.categorie">
+                                            </div>
+                                            <div class="form-group">
+                                                 <label>Annee</label> <input type="text" placeholder="intitule de l'objectif" class="form-control" ng-model="objectif.annee">
+                                            </div>
+                                             <div class="form-group">
+                                                 <label>Pourcentage d'avancement</label> <input type="text" placeholder="intitule de l'objectif" class="form-control" ng-model="objectif.pourcentage">
+                                            </div>
+                                            <button type="button" class="btn btn-primary" ng-click="addobjectif()">Save changes</button>
+                  
+                </div>
+             </div>
+            </div>
+            
+            </div>
+     </uib-tab>
+      <uib-tab >
+      <tab-heading>
+     <i class="fa fa-comments-o "></i> Feedbacks
+     </tab-heading>
+      Static content2</uib-tab>
+  </uib-tabset>
+   
+ <div>
+
+
+<div>
+
+
+ </div> 
+
+
+</div>
+   
+   
 </div>
