--- a/src/main/resources/static/partials/ajout.html
+++ b/src/main/resources/static/partials/ajout.html
@@ -13,6 +13,17 @@
                 		<input type="text" ng-model="user.prenom" class="form-control">
                 	</div>
              	  </div> 
+             	  
+             	  <div class="form-group" id="eventForm" >
+                        <label class="col-sm-2 ">Date de Naissance</label>
+                            <div class="col-sm-6 date">
+                                <div class="input-group input-append date" id="datePicker">
+                                <input type="date" ng-model="user.dateNaissance" class="form-control" name="date">
+                                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                             </div>
+                            </div>
+                   </div>
+                   
              	  <div class="form-group" id="eventForm" >
                         <label class="col-sm-2 ">Date d'embauche</label>
                             <div class="col-sm-6 date">
@@ -22,6 +33,13 @@
                              </div>
                             </div>
                    </div>
+                   <div class="form-group" >
+                        <label class="col-sm-2">Poste Occupe</label>
+                            <div class="col-sm-6">
+                                <input type="text" data-ng-model="user.poste" class="form-control">
+                            </div>
+                   </div>
+                   
                    <div class="form-group" >
                         <label class="col-sm-2">E-MAIL</label>
                             <div class="col-sm-6">
