--- a/src/main/resources/static/partials/ajout_projet.html
+++ b/src/main/resources/static/partials/ajout_projet.html
@@ -8,14 +8,21 @@
                 	</div>
              	  </div> 
              	  <div class="form-group"><label class="col-sm-2">Date de debut</label>
-                	<div class="col-sm-6">
-                		<input type="text" ng-model="projet.dateDebut" class="form-control">
+                	<div class="col-sm-6 date">
+                	    <div class="input-group input-append date" id="datePicker">
+                		<input type="date" ng-model="projet.dateDebut" class="form-control">
+                		<span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                		
+                		</div>
                 	</div>
              	  </div> 
              	  <div class="form-group" >
                         <label class="col-sm-2 ">Date de fin</label>
-                            <div class="col-sm-6">
-                                <input type="text" ng-model="projet.dateFin" class="form-control">
+                            <div class="col-sm-6 date">
+                                <div class="input-group input-append date" id="datePicker">
+                                <input type="date" ng-model="projet.dateFin" class="form-control">
+                                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                </div>
                             </div>
                    </div>
                    <div growl></div>
