--- a/src/main/resources/static/inspi/assets/css/style.css
+++ b/src/main/resources/static/inspi/assets/css/style.css
@@ -8,6 +8,14 @@
 .spacer{
 	margin-top: 30px;
 }
+
+.error{
+	
+     color: red;
+	}
+	body{
+	font-family: 'Roboto', sans-serif,'Helvetica Neue', Helvetica, Arial, sans-serif"
+	}
 h1,
 h2,
 h3,
