--- a/src/main/resources/static/partials/ajoutCollaborateur.html
+++ b/src/main/resources/static/partials/ajoutCollaborateur.html
@@ -6,12 +6,14 @@
       <label class="col-sm-2 ">Nom</label>
       <div class="col-sm-6">
         <input type="text" ng-model="user.nom" class="form-control">
+        <span class="error" ng-if="errors">{{errors.nom}}</span>
       </div>
     </div>
     <div class="form-group">
       <label class="col-sm-2">prenom</label>
       <div class="col-sm-6">
         <input type="text" ng-model="user.prenom" class="form-control">
+        <span class="error" ng-if="errors">{{errors.prenom}}</span>
       </div>
     </div>
     <div class="form-group" id="eventForm" >
@@ -21,6 +23,7 @@
           <input type="date" ng-model="user.dateNaissance" class="form-control" name="date">
           <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
         </div>
+        <span class="error" ng-if="errors">{{errors.dateNaissance}}</span>
       </div>
     </div>
     <div class="form-group" id="eventForm" >
